src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Submitted_Within_Office_Hours__c</fullName>
        <formula>IF(
AND(
MONTH(DATEVALUE(CreatedDate))&gt;2,
MONTH(DATEVALUE(CreatedDate))&lt;11),
CASE(
VALUE(MID(TEXT(CreatedDate),12,2)),
0,&quot;No&quot;,
1,&quot;No&quot;,
2,&quot;No&quot;,
3,&quot;No&quot;,
4,&quot;No&quot;,
5,&quot;No&quot;,
6,&quot;No&quot;,
7,&quot;Yes, UK Time&quot;,
8,&quot;Yes, UK Time&quot;,
9,&quot;Yes, UK Time&quot;,
10,&quot;Yes, UK Time&quot;,
11,&quot;Yes, UK Time&quot;,
12,&quot;Yes, UK Time&quot;,
13,&quot;Yes, UK Time&quot;,
14,&quot;Yes, UK Time&quot;,
15,&quot;Yes, US Time&quot;,
16,&quot;Yes, US Time&quot;,
17,&quot;Yes, US Time&quot;,
18,&quot;Yes, US Time&quot;,
19,&quot;Yes, US Time&quot;,
20,&quot;Yes, US Time&quot;,
21,&quot;Yes, US Time&quot;,
22,&quot;Yes, US Time&quot;,
23,&quot;Yes, US Time&quot;,
null),
CASE(
VALUE(MID(TEXT(CreatedDate),12,2)),
0,&quot;Yes, US Time&quot;,
1,&quot;No&quot;,
2,&quot;No&quot;,
3,&quot;No&quot;,
4,&quot;No&quot;,
5,&quot;No&quot;,
6,&quot;No&quot;,
7,&quot;No&quot;,
8,&quot;Yes, UK Time&quot;,
9,&quot;Yes, UK Time&quot;,
10,&quot;Yes, UK Time&quot;,
11,&quot;Yes, UK Time&quot;,
12,&quot;Yes, UK Time&quot;,
13,&quot;Yes, UK Time&quot;,
14,&quot;Yes, UK Time&quot;,
15,&quot;Yes, UK Time&quot;,
16,&quot;Yes, US Time&quot;,
17,&quot;Yes, US Time&quot;,
18,&quot;Yes, US Time&quot;,
19,&quot;Yes, US Time&quot;,
20,&quot;Yes, US Time&quot;,
21,&quot;Yes, US Time&quot;,
22,&quot;Yes, US Time&quot;,
23,&quot;Yes, US Time&quot;,
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Within Office Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <label>Support Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1 - Client Support</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Client Support</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Data Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Support</fullName>
                    <label>Green Street Platform Client Support</label>
                </value>
                <value>
                    <fullName>US Data Support</fullName>
                </value>
                <value>
                    <fullName>EU Data Support</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Green Street</fullName>
                </value>
                <value>
                    <fullName>User List Request</fullName>
                </value>
                <value>
                    <fullName>Green Street News Client Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surviving_Account_ID__c</fullName>
        <label>Surviving Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surviving_Account_Name__c</fullName>
        <label>Surviving Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surviving_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surviving Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surviving_Contact_ID__c</fullName>
        <label>Surviving Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surviving_Contact_Name__c</fullName>
        <label>Surviving Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surviving_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surviving Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_to_Trigger_Survey__c</fullName>
        <formula>IF (ISPICKVAL(Type, &quot;Error&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Methodology&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Problem&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Platform Functionality&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Backup Data&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Subscription&quot;), TRUE, 
IF (ISPICKVAL(Type, &quot;Email Preferences&quot;), TRUE,
IF (ISPICKVAL(Type, &quot;Research Request&quot;), TRUE,
IF (ISPICKVAL(Type, &quot;“Go Fish” / Miscellaneous&quot;), TRUE,
IF (ISPICKVAL(Type, &quot;Advanced Back Up Data&quot;), TRUE,
IF (ISPICKVAL(Type, &quot;Complex Methodology&quot;), TRUE,
FALSE)))))))))))</formula>
        <label>Type to Trigger Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>1-2 Weeks</fullName>
                </value>
                <value>
                    <fullName>2-4 Weeks</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>Dream State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Disposals</fullName>
                </value>
                <value>
                    <fullName>Acquisition Opportunity Sourcing</fullName>
                </value>
                <value>
                    <fullName>Development Feasibility &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Evaluating Loan Opportunities</fullName>
                </value>
                <value>
                    <fullName>Expansion into New Markets</fullName>
                </value>
                <value>
                    <fullName>Internal Analysis</fullName>
                </value>
                <value>
                    <fullName>Investment Strategies</fullName>
                </value>
                <value>
                    <fullName>Investment Monitoring</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Periodic Reporting / Valuation</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Other - See Solution Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webmetrics_Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webmetrics Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Module__c</fullName>
        <label>Website Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Analysis</fullName>
                </value>
                <value>
                    <fullName>Interactive Charting</fullName>
                </value>
                <value>
                    <fullName>REIT Portfolio Search</fullName>
                </value>
                <value>
                    <fullName>Retail Databases</fullName>
                </value>
                <value>
                    <fullName>Weekly REIT Pricing</fullName>
                </value>
                <value>
                    <fullName>Market Data</fullName>
                </value>
                <value>
                    <fullName>Sales Comps</fullName>
                </value>
                <value>
                    <fullName>Market Forecasts</fullName>
                </value>
                <value>
                    <fullName>Standardized Downloads</fullName>
                </value>
                <value>
                    <fullName>Debt Databases</fullName>
                </value>
                <value>
                    <fullName>AVM / Portfolio Analytics</fullName>
                </value>
                <value>
                    <fullName>Broker Rankings /  Market Participants</fullName>
                </value>
                <value>
                    <fullName>DataLink / API</fullName>
                </value>
                <value>
                    <fullName>Rent Comps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Days_Open__c</fullName>
        <formula>IF( ISBLANK( ClosedDate), Today()- DateValue(CreatedDate) ,DateValue( ClosedDate) - DateValue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Account_Assignment_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Priority__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Account_Assignment</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated</value>
        </filters>
        <label>Account Assignment Cases</label>
    </listViews>
    <listViews>
        <fullName>Account_Management_Open_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>AM</value>
        </filters>
        <label>Account Management Open Requests</label>
        <sharedTo>
            <roleAndSubordinates>CAM_Manager</roleAndSubordinates>
            <roleAndSubordinates>Customer_Success_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Account_Owner__c</columns>
        <columns>ActivationDeactivation_Needs__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cancelled_EU_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>EU Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>EU Data Support</value>
        </filters>
        <label>All Cancelled EU Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cancelled_US_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND (3 OR 6)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>US Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>US Data Support</value>
        </filters>
        <label>All Cancelled US Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_EU_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>EU Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>EU Data Support</value>
        </filters>
        <label>All Closed EU Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_US_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>US Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>US Data Support</value>
        </filters>
        <label>All Closed US Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_EU_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND (3 OR 6)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated,Due Diligence,Working,Backlog</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>EU Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>EU REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>Client Support,EU Data Support</value>
        </filters>
        <label>All Open EU Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Help_Desk_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 7) AND (5 OR 8 OR 9)  AND (3 OR 6) AND 10</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Support_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated,Working</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Help Desk</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>contains</operation>
            <value>Customer Success</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>Client Support,US Data Support,EU Data Support,User List Request</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>User List Requests</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatisch</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Respuesta automática</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>notEqual</operation>
            <value>React News,Green Street News Client Support</value>
        </filters>
        <label>All Open Help Desk Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_US_Data_Support_Cases</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND (3 OR 6)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Minutes_Spent_Cases__c</columns>
        <columns>Solution_Notes__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>Products_Discussed__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Account_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Help_Desk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated,Due Diligence,Working,Backlog</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>US Data Support</value>
        </filters>
        <filters>
            <field>Case_Owner_Role__c</field>
            <operation>equals</operation>
            <value>REA</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Automatic Reply</value>
        </filters>
        <filters>
            <field>Support_Type__c</field>
            <operation>equals</operation>
            <value>Client Support,US Data Support</value>
        </filters>
        <label>All Open US Data Support Cases</label>
    </listViews>
    <listViews>
        <fullName>Ampltidude_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Request_Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Requested_By__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Salesforce_Request</value>
        </filters>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Amplitude</value>
        </filters>
        <label>Ampltidude Requests</label>
    </listViews>
    <listViews>
        <fullName>Bounce_Back_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Bounce Back Queue</label>
        <queue>Bounce_Back_Queue</queue>
    </listViews>
    <listViews>
        <fullName>CTR_Amplitude_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CTR Amplitude</label>
        <queue>CTR_Amplitude</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTR_Chorus_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CTR Chorus</label>
        <queue>CTR_Chorus</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTR_Hubspot_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CTR HubSpot</label>
        <queue>CTR_Hubspot</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Account_Assignment</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <label>Account Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Access</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <description>Used to manage and track client deactivation needs</description>
        <label>Client Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Pricing_Proposal</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <label>Contract / Pricing Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal_Score_Error</fullName>
        <active>true</active>
        <businessProcess>Salesforce Request Process</businessProcess>
        <description>This case is use if a user will encounter error when scoring an opportunity</description>
        <label>Deal Score Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>Duplicate_Request</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <label>Duplicate Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Help_Desk</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <description>Customer Success Help Desk</description>
        <label>Help Desk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Review</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <description>Used to review opportunity data before closing and sending over a Sales Order to NS.</description>
        <label>Opportunity Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Request</fullName>
        <active>true</active>
        <businessProcess>Salesforce Request Process</businessProcess>
        <label>Commercial Tech Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_List_Requests</fullName>
        <active>true</active>
        <businessProcess>User List Request</businessProcess>
        <label>User List Requests</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_And_Contact_Case_Entry_Value</fullName>
        <active>true</active>
        <description>This will help us avoid issues like when someone submits a duplicate account request, but fills in the contact details vice versa</description>
        <errorConditionFormula>OR(AND (
ISPICKVAL( Type, &quot;Account&quot; ),
NOT ( AND (
ISBLANK( Surviving_Contact__c ),
ISBLANK ( Duplicate_Contact__c )
))),


AND (
ISPICKVAL ( Type, &quot;Contact&quot; ),
NOT ( AND (
ISBLANK( Surviving_Account__c ),
ISBLANK ( Duplicate_Account__c )
))))</errorConditionFormula>
        <errorMessage>Inaccurate data combination. (Ex: if Type = Account, you may only enter data into the Account fields below)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Case_Account_Manager_Field_Update</fullName>
        <active>true</active>
        <description>Create a lookup field to the user object called “Account Manager” on the case record. Restrict the values in the field to only users with role containing “CAM”</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(
OR(
CONTAINS(&apos;UK Associate Sales Manager&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;US Associate Sales Manager&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;UK Sales&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;US Sales&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;Sales Manager&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;CAM&apos;,Account_Manager__r.UserRole.Name),
CONTAINS(&apos;CAM Manager&apos;,Account_Manager__r.UserRole.Name))),
RecordType.DeveloperName = &quot;Account_Assignment&quot; 
)</errorConditionFormula>
        <errorDisplayField>Account_Manager__c</errorDisplayField>
        <errorMessage>Only “CAM” and &quot;Sales&quot; Roles can be assign as Account Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Account_Assignment_Cases_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  ISCHANGED( Status ) , 
  ISPICKVAL(Status, &quot;Closed&quot;),
  RecordType.DeveloperName = &quot;Account_Assignment&quot;, 
  ISBLANK( Account_Manager__c )
)</errorConditionFormula>
        <errorMessage>You can’t close a “Account Assignment” case without the manager field filled in</errorMessage>
    </validationRules>
</CustomObject>